{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 557,
  "lineage": "164aab6c-0a62-5045-1414-50ef3b04797a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025a6a5beb74db87b",
            "arn": "arn:aws:ec2:eu-central-1:918897996293:instance/i-0c97fd09e871d0b1b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c97fd09e871d0b1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a12d6f3607092a90",
            "private_dns": "ip-172-31-29-186.eu-central-1.compute.internal",
            "private_ip": "172.31.29.186",
            "public_dns": "ec2-18-192-129-131.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.129.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bcb948bf033d6d27",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020efa7096deadbfd",
            "tags": {
              "Name": "instance_1"
            },
            "tags_all": {
              "Name": "instance_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d76d5cffd27cb4e"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg"
          ]
        },
        {
          "index_key": "instance_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025a6a5beb74db87b",
            "arn": "arn:aws:ec2:eu-central-1:918897996293:instance/i-00a812d5ba4fea62c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a812d5ba4fea62c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e71a1611267948f0",
            "private_dns": "ip-172-31-19-28.eu-central-1.compute.internal",
            "private_ip": "172.31.19.28",
            "public_dns": "ec2-3-75-172-109.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.172.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0041fba87721cbf12",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020efa7096deadbfd",
            "tags": {
              "Name": "instance_2"
            },
            "tags_all": {
              "Name": "instance_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d76d5cffd27cb4e"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:loadbalancer/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae",
            "arn_suffix": "app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240121183617089300000003-203966620.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:loadbalancer/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240121183617089300000003",
            "security_groups": [
              "sg-0e5d48a0b5fd26fdd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020efa7096deadbfd"
              },
              {
                "subnet_id": "subnet-086f8ac4add8ed9d0"
              }
            ],
            "subnets": [
              "subnet-020efa7096deadbfd",
              "subnet-086f8ac4add8ed9d0"
            ],
            "vpc_id": "vpc-0428efaee2e1725c1",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg",
            "module.vpc.aws_default_subnet.default_subnet-1a",
            "module.vpc.aws_default_subnet.default_subnet-1b"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:listener/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae/c0326e07c45eafbf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:listener/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae/c0326e07c45eafbf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:loadbalancer/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.application-lb",
            "module.security_group.aws_security_group.alb_sg",
            "module.vpc.aws_default_subnet.default_subnet-1a",
            "module.vpc.aws_default_subnet.default_subnet-1b"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:targetgroup/tf-20240121183628779000000005/673d227f59f7b094",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:listener-rule/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae/c0326e07c45eafbf/5f3ea54301cf4ecf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:listener-rule/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae/c0326e07c45eafbf/5f3ea54301cf4ecf",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:listener/app/tf-lb-20240121183617089300000003/2a4b4b7c387f9fae/c0326e07c45eafbf",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.application-lb",
            "module.load_balancer.aws_lb_listener.http-lb-listener",
            "module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.security_group.aws_security_group.alb_sg",
            "module.vpc.aws_default_subnet.default_subnet-1a",
            "module.vpc.aws_default_subnet.default_subnet-1b",
            "module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:targetgroup/tf-20240121183628779000000005/673d227f59f7b094",
            "arn_suffix": "targetgroup/tf-20240121183628779000000005/673d227f59f7b094",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:targetgroup/tf-20240121183628779000000005/673d227f59f7b094",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20240121183628779000000005",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0428efaee2e1725c1"
          },
          "dependencies": [
            "module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:targetgroup/tf-20240121183628779000000005/673d227f59f7b094-20240121195046287900000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:targetgroup/tf-20240121183628779000000005/673d227f59f7b094",
            "target_id": "i-0c97fd09e871d0b1b"
          },
          "dependencies": [
            "module.ec2.aws_instance.instance",
            "module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.security_group.aws_security_group.sg",
            "module.vpc.aws_default_vpc.vpc"
          ]
        },
        {
          "index_key": "instance_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:targetgroup/tf-20240121183628779000000005/673d227f59f7b094-20240121195046250800000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:918897996293:targetgroup/tf-20240121183628779000000005/673d227f59f7b094",
            "target_id": "i-00a812d5ba4fea62c"
          },
          "dependencies": [
            "module.ec2.aws_instance.instance",
            "module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.security_group.aws_security_group.sg",
            "module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3065268773",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5d48a0b5fd26fdd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1007817923",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e5d48a0b5fd26fdd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:918897996293:security-group/sg-0e5d48a0b5fd26fdd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5d48a0b5fd26fdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240121183616355700000001",
            "name_prefix": "terraform-",
            "owner_id": "918897996293",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0428efaee2e1725c1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:918897996293:security-group/sg-07d76d5cffd27cb4e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07d76d5cffd27cb4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ec2-instances-sg",
            "name_prefix": "",
            "owner_id": "918897996293",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0428efaee2e1725c1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-572913806",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07d76d5cffd27cb4e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:918897996293:subnet/subnet-020efa7096deadbfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020efa7096deadbfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918897996293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0428efaee2e1725c1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:918897996293:subnet/subnet-086f8ac4add8ed9d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086f8ac4add8ed9d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918897996293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0428efaee2e1725c1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:918897996293:vpc/vpc-0428efaee2e1725c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-030255a670eef5758",
            "default_route_table_id": "rtb-0f267b23bb8ba1a6f",
            "default_security_group_id": "sg-011b6470bc1b7e7a8",
            "dhcp_options_id": "dopt-031e6b88e7e23f8a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0428efaee2e1725c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f267b23bb8ba1a6f",
            "owner_id": "918897996293"
          }
        }
      ]
    }
  ]
}